# lem-in

./: CMakeLists.txt  Makefile  README.md  lem-in  test_1  test_2  test_3  test_4  vp_ants.c~
includes/: lem_in.h
libft/src/get_next_line/: get_next_line.c
libft/src/libft/: libft.h
src/: debrec.c  main.c  main.c~  main_algo.c  main_algo_2.c  validation.c  vp_ants.c  vp_run_ants.c  vp_useful.c  vp_useful_2.c  vp_useful_3.c  vp_validation.c
